--- a/PROJEKT - CIJELI/kontakt.html
+++ b/PROJEKT - CIJELI/kontakt.html
@@ -55,7 +55,7 @@
 				<label for="lname">E-mail adresa *</label>
 				<input type="email" id="email" name="email" placeholder="Vaša e-mail adresa.." required>
 
-				<label for="country">Odaberite Državu</label>
+				<label for="country">Odaberite državu</label>
 				<select id="country" name="country">
 				  <option value="">Odaberite...</option>
 				  <option value="SRB">Serbia</option>
